--- a/eng/pipelines/templates/stages/1es-redirect.yml
+++ b/eng/pipelines/templates/stages/1es-redirect.yml
@@ -22,8 +22,9 @@ extends:
     settings:
       skipBuildTagsForGitHubPullRequests: true
     sdl:
-      credscan:
-        suppressionsFile: $(Build.SourcesDirectory)/eng/CredScanSuppression.json
+      # Uncomment when needed
+      # credscan:
+      #   suppressionsFile: $(Build.SourcesDirectory)/eng/CredScanSuppression.json
       sourceAnalysisPool:
         name: azsdk-pool-mms-win-2022-general
         image: azsdk-pool-mms-win-2022-1espt
