--- a/eng/pipelines/publish-dev-release.yml
+++ b/eng/pipelines/publish-dev-release.yml
@@ -1,23 +1,38 @@
 trigger: none
 pr: none
 
-pool:
-  vmImage: "ubuntu-22.04"
+extends:
+  template: /eng/pipelines/templates/stages/1es-redirect.yml
+  parameters:
+    stages:
+      - stage: Publish_Dev_Release
+        jobs:
+          - job: Publish_Dev_Release
 
-steps:
-  - template: ../steps/set-env.yaml
+            variables:
+              - template: /eng/pipelines/templates/variables/image.yml
+              - name: TypeSpecRustPkgDir
+                value: $(System.DefaultWorkingDirectory)/packages/typespec-rust
 
-  - template: ../steps/build-test.yaml
+            pool:
+              image: $(LINUXNEXTVMIMAGE)
+              name: $(LINUXNEXTPOOL)
+              os: linux
 
-  - pwsh: |
-      $currentVersion = node -p -e "require('$(System.DefaultWorkingDirectory)/packages/typespec-rust/package.json').version";
-      $currentVersion="$currentVersion-$(Build.BuildNumber)";
-      cd packages/typespec-rust
-      npm version --no-git-tag-version $currentVersion
-      npm pack;
-      npm install -g azure-tools-typespec-rust-$currentVersion.tgz
-      if ($LASTEXITCODE) {
-        exit $LASTEXITCODE
-      }
-      npx publish-release --token $(azuresdk-github-pat) --repo autorest.rust --owner azure --name "TypeSpec emitter for Rust v$currentVersion" --tag v$currentVersion --notes='Beta version of TypeSpec emitter for Rust SDKs' --prerelease --editRelease false --assets azure-tools-typespec-rust-$currentVersion.tgz --target_commitish $(Build.SourceBranchName);
-    displayName: "Publish Dev Release"
+            steps:
+              - template: /eng/pipelines/templates/steps/set-env.yaml
+
+              - template: /eng/pipelines/templates/steps/build-test.yaml
+
+              - pwsh: |
+                  $currentVersion = node -p -e "require('$(System.DefaultWorkingDirectory)/packages/typespec-rust/package.json').version";
+                  $currentVersion="$currentVersion-$(Build.BuildNumber)";
+                  cd packages/typespec-rust
+                  npm version --no-git-tag-version $currentVersion
+                  npm pack;
+                  if ($LASTEXITCODE) { exit $LASTEXITCODE }
+                  npm install -g azure-tools-typespec-rust-$currentVersion.tgz
+                  if ($LASTEXITCODE) { exit $LASTEXITCODE }
+                  exit 0
+                  # npx publish-release --token $(azuresdk-github-pat) --repo autorest.rust --owner azure --name "TypeSpec emitter for Rust v$currentVersion" --tag v$currentVersion --notes='Beta version of TypeSpec emitter for Rust SDKs' --prerelease --editRelease false --assets azure-tools-typespec-rust-$currentVersion.tgz --target_commitish $(Build.SourceBranchName);
+                displayName: "Publish Dev Release"
