set code coverage output dir

--- a/packages/typespec-rust/package.json
+++ b/packages/typespec-rust/package.json
@@ -21,7 +21,7 @@
     "build": "tsc -p .",
     "eslint-fix": "eslint . --fix --ext .ts",
     "eslint": "eslint . --ext .ts",
-    "merge-coverage": "c8 report --temp-directory=./coverage/.tmp --reporter=cobertura --reporter=text",
+    "merge-coverage": "c8 report --reporter=cobertura --reporter=text",
     "test": "vitest run",
     "test-ci": "vitest run --coverage --reporter=junit --reporter=default --no-file-parallelism",
     "watch": "tsc -p . --watch"
