fix tsp command

--- a/eng/pipelines/templates/steps/build-test.yaml
+++ b/eng/pipelines/templates/steps/build-test.yaml
@@ -26,6 +26,7 @@ steps:
     displayName: Publish code coverage
 
   - script: |
+      ls -lR ../node_modules/@typespec
       pnpm run tspcompile --verbose
       git add -A .
       git diff --staged -w 1>&2
