Add CI pipeline for publishing cadl-ranch coverage (#69)
* Add CI pipeline for publishing cadl-ranch coverage

* tests don't fail fast

propagate exit code from cargo test

* use npx for launching cadl-ranch

--- a/eng/pipelines/templates/steps/build-test.yaml
+++ b/eng/pipelines/templates/steps/build-test.yaml
@@ -37,3 +37,13 @@ steps:
       cargo build
     displayName: Compile Tests
     workingDirectory: $(TypeSpecRustPkgDir)/test
+
+  - pwsh: |
+      pnpm cadl-ranch --start
+      cargo test --no-fail-fast
+      $code = $LASTEXITCODE
+      pnpm cadl-ranch --stop
+      exit $code
+    displayName: "Run cadl-ranch Tests"
+    timeoutInMinutes: 10
+    workingDirectory: $(System.DefaultWorkingDirectory)/packages/typespec-rust/test/cadlranch
