Add more Spector coverage (#413)
* Add more Spector coverage

* more coverage

--- a/packages/typespec-rust/test/Cargo.toml
+++ b/packages/typespec-rust/test/Cargo.toml
@@ -20,6 +20,9 @@ members = [
     "spector/payload/xml",
     "spector/type/array",
     "spector/type/dictionary",
+    "spector/azure/client-generator-core/api-version/header",
+    "spector/azure/client-generator-core/api-version/path",
+    "spector/azure/client-generator-core/api-version/query",
     "spector/azure/client-generator-core/client-initialization",
     "spector/azure/client-generator-core/flatten-property",
     "spector/azure/client-generator-core/usage",
@@ -30,6 +33,7 @@ members = [
     "spector/azure/example/basic",
     "spector/azure/payload/pageable",
     "spector/azure/resource-manager/common-properties",
+    "spector/azure/resource-manager/non-resource",
     "spector/client/structure/client-operation-group",
     "spector/client/structure/default",
     "spector/client/structure/multi-client",
