Add more Spector test coverage (#669)
* Add more Spector test coverage

* clippy

--- a/packages/typespec-rust/test/Cargo.toml
+++ b/packages/typespec-rust/test/Cargo.toml
@@ -12,6 +12,7 @@ members = [
     "spector/authentication/http/custom",
     "spector/authentication/oauth2",
     "spector/authentication/union",
+    "spector/client/enum-conflict",
     "spector/client/naming",
     "spector/encode/bytes",
     "spector/encode/datetime",
@@ -40,6 +41,7 @@ members = [
     "spector/azure/core/model",
     "spector/azure/core/page",
     "spector/azure/core/scalar",
+    "spector/azure/core/traits",
     "spector/azure/encode/duration",
     "spector/azure/example/basic",
     "spector/azure/payload/pageable",
