Support deserializeEmptyStringAsNull decorator (#674)
* Support deserializeEmptyStringAsNull decorator

Small refactoring of how serde helpers are emitted to make it more
general purpose.

* spelling

* fix changelog after rebase

* use helper from azure_core

* set release date

--- a/packages/typespec-rust/test/Cargo.toml
+++ b/packages/typespec-rust/test/Cargo.toml
@@ -34,6 +34,7 @@ members = [
     "spector/azure/client-generator-core/api-version/query",
     "spector/azure/client-generator-core/client-initialization",
     "spector/azure/client-generator-core/client-location",
+    "spector/azure/client-generator-core/deserialize-empty-string-as-null",
     "spector/azure/client-generator-core/flatten-property",
     "spector/azure/client-generator-core/usage",
     "spector/azure/core/basic",
@@ -91,7 +92,7 @@ rust-version = "1.85"
 [workspace.dependencies]
 # Third-party dependencies should be kept up to date with https://github.com/Azure/azure-sdk-for-rust/blob/main/Cargo.lock
 async-trait = "0.1.88"
-azure_core = { git = "https://github.com/Azure/azure-sdk-for-rust.git", rev = "6bba3950b0388913ae2e57aa83b6a438b586a9ee", features = [
+azure_core = { git = "https://github.com/Azure/azure-sdk-for-rust.git", rev = "0e8d985e4fed40cf9cd79d2f018925af055733e0", features = [
     "decimal",
     "reqwest",
 ] }
